# dfa-runner

./: .gitignore  README.md  pyproject.toml  pyrproject.toml
dfaRunner/: main.py
examples/: a^m_b^m.toml  mult3.toml
