[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dfaRunner"
version = "0.1.0"
description = "Run words through A DFA specified in a given toml file"
authors = [{name="Christian Haastrup", email="c.haastrup865@gmail.com"}]
dependencies = ["toml"]

[project.scripts]
dfaRunner = "dfaRunner.main:cli"
